<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.unionpay.qrcode.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <Button
            android:id="@+id/bt_unionpay_tranfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:layout_weight="1"
            android:background="@drawable/button_rec"
            android:text="NETS-SGQR" />

        <Button
            android:id="@+id/bt_unionpay_takecrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_rec"
            android:text="@string/nets_code" />

        <Button
            android:id="@+id/bt_commercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:background="@drawable/button_rec"
            android:text="@string/emv_merchant" />

        <Button
            android:id="@+id/bt_consumer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_rec"
            android:text="@string/emv_consumer" />

        <Button
            android:id="@+id/bt_unionpay_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_rec"
            android:text="@string/unionpay_code" />

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45px"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_rec"
            android:text="@string/scan" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8" />
</LinearLayout>
